# MessengerTask

./: CMakeLists.txt
MessengerTask/: CMakeLists.txt  MessengerTask.cpp  MessengerTask.h  TASK1_MESSENGER.cpp  messenger_test.cpp  test.cpp
MessengerTask/inc/: task1_messenger.hpp
MessengerTask/src/: task1_messenger.cpp
MessengerTask/test/: messenger_test.cpp
